[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atorch-ble"
version = "0.1.0"
description = "Standalone parser for the Atorch BLE protocol (J7-C / UC96 and related USB/AC/DC meters)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Dallan Wagner", email = "dallanwagz1@gmail.com" }]
keywords = ["atorch", "ble", "bluetooth", "homeassistant", "j7-c", "uc96"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
]

[project.urls]
Homepage = "https://github.com/dallanwagz/atorch-ble"
Repository = "https://github.com/dallanwagz/atorch-ble"
Issues = "https://github.com/dallanwagz/atorch-ble/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/atorch_ble"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config --cov=atorch_ble --cov-report=term-missing --cov-fail-under=95"

[tool.coverage.run]
source = ["atorch_ble"]
branch = false

[tool.coverage.report]
omit = ["tests/*"]
show_missing = true
